2009-01-21  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session-feature.h: remove the dummy typedef for
	struct SoupSessionFeature that was needed because we weren't
	scanning soup-types.h. Fixes the build with non-GNU compilers.

	* libsoup/soup-session-feature.c: document
	SoupSessionFeatureInterface

	* docs/reference/Makefile.am (IGNORE_HFILES): oops, don't ignore
	soup-types.h

	* docs/reference/libsoup-2.4-docs.sgml:
	* docs/reference/libsoup-2.4-sections.txt: Split
	SoupSessionFeature into its own file.

2009-01-12  Dan Winship  <danw@gnome.org>

	* libsoup/soup-cookie-jar.c (request_started): Don't pass NULL to
	soup_message_headers_replace(), call soup_message_headers_remove()
	if there are no cookies. Likely fix for webkit bug #23240.

	* libsoup/soup-message-headers.c (soup_message_headers_append):
	g_return_if_fail (value != NULL)

2009-01-05  Dan Winship  <danw@gnome.org>

	2.25.4

	* NEWS: update

2008-12-23  Dan Winship  <danw@gnome.org>

	* configure.in: belated post-release bump to 2.25.4

	* libsoup/soup-session.c (soup_session_get_features)
	(soup_session_get_feature): add these to query session features.
	#565392.

2008-12-23  Dan Winship  <danw@gnome.org>

	* configure.in: add some more warning CFLAGS, inspired by Benjamin
	Otte's blog post, although none of them picked out any actual
	bugs. Annoyingly, the most interesting warnings came from
	-Wwrite-strings and -Wshadow, both of which I decided against
	keeping, because they had too many false positives.

	* libsoup/soup-cookie-jar.c (soup_cookie_jar_get_cookies): rename
	a variable to avoid shadowing.

	* libsoup/soup-message-headers.c
	(soup_message_headers_get_ranges): move a variable declaration to
	avoid a possibly-confusing shadowing.

	* tests/forms-test.c:
	* tests/header-parsing.c:
	* tests/range-test.c:
	* tests/test-utils.c: constify some "char *"s that should have
	already been const.

	* tests/get.c (find_hrefs): rename an arg whose name shadowed a